--- a/modulo4/desafio2/style.css
+++ b/modulo4/desafio2/style.css
@@ -5,3 +5,86 @@
     background: #FFFFFF;
     font-family: 'Roboto', sans-serif;
 }
+
+a {
+    text-decoration: none;
+}
+
+h1 {
+    margin: 128px 0 0 16px;
+
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 41px;
+}
+
+p {
+    font-size: 20px;
+    line-height: 26px;
+    color: rgba(0, 0, 0, 0.5);
+
+    margin: 12px 16px 102px 16px;
+}
+
+input {
+    width: 343px;
+    height: 48px;
+    border-radius: 6px;
+    background: #F2F2F7;
+    border: none;
+    outline: none;
+    display: block;
+    margin: 0 auto;
+    padding-left: 14px;
+    font-size: 16px;
+}
+
+input::placeholder {
+    color: #929292;
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.input-password {
+    margin: 12px auto 17px auto;
+}
+
+.forgot-password {
+    display: block;
+    font-size: 16px;
+    line-height: 22px;
+    color: #007AFF;
+    text-align: right;
+    margin: 0 16px 20px 0;
+}
+
+button {
+    width: 343px;
+    height: 48px;
+    background: rgba(0, 0, 0, 0.94);
+    border-radius: 10px;
+    border: none;
+    display: block;
+    margin: auto;
+    margin-bottom: 204px;
+
+    color: #FFFFFF;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 22px;
+
+}
+
+.sing-up {
+    display: block;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 19px;
+    color: rgba(0, 0, 0, 0.51);
+    margin: 204px auto 39px auto;
+    text-align: center;
+}
+
+strong {
+    color: #007AFF;
+}
