--- a/projeto-ConversorDeMoedas/style.css
+++ b/projeto-ConversorDeMoedas/style.css
@@ -32,3 +32,88 @@ h1 {
 
     padding-top: 24px;
 }
+
+main {
+    padding: 24px;
+}
+
+label {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+
+    color: #777777;
+}
+
+select {
+    width: 100%;
+    height: 48px;
+    left: 24px;
+    top: 113px;
+
+    display: block;
+
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+
+    padding-left: 16px;
+    margin-top: 6px;
+    margin-bottom: 24px;
+
+    cursor: pointer;
+    outline: none;
+    appearance: none;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    font-size: 16px;
+}
+
+input {
+    width: 100%;
+    height: 48px;
+    left: 24px;
+    top: 302px;
+
+    display: block;
+
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    padding: 16px;
+    margin-top: 6px;
+    font-size: 18px;
+    outline: none;
+}
+
+button {
+    width: 100%;
+    height: 48px;
+
+    margin: 24px 0 36px 0;
+
+
+    background: #1B83E2;
+    border-radius: 25px;
+
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+
+    color: #F4F4F4;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+
+button:active {
+    opacity: 0.7;
+}
