--- a/projeto-ConversorDeMoedas/style.css
+++ b/projeto-ConversorDeMoedas/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 18px;
 }
 
 body{
@@ -23,10 +26,7 @@ header {
 
 h1 {
     font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 24px;
-    line-height: 18px;
     color: #F4F4F4;
     text-align: center;
 
@@ -38,11 +38,7 @@ main {
 }
 
 label {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 18px;
 
     color: #777777;
 }
@@ -101,7 +97,6 @@ button {
 
     font-weight: bold;
     font-size: 16px;
-    line-height: 18px;
     text-align: center;
 
     color: #F4F4F4;
@@ -116,4 +111,31 @@ button:hover {
 
 button:active {
     opacity: 0.7;
+}
+
+section {
+    border: 1px solid #1B83E2;
+    border-radius: 4px;
+}
+
+.currency-container {
+    text-align: center;
+    padding: 10px;
+}
+
+.currency-name {
+    font-size: 14px;
+    color: #777777;
+}
+
+.currency-value {
+    font-size: 20px;
+    font-weight: bold;
+    color: #1B83E2;
+}
+
+.arrow-img {
+    margin: 15px auto;
+    display: block;
+
 }
