--- a/projeto-ConversorDeMoedas/style.css
+++ b/projeto-ConversorDeMoedas/style.css
@@ -10,28 +10,30 @@
 
 body{
     background: #E5E5E5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
     width: 375px;
     background: #F4F4F4;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 50px;
+   
 }
 
 header {
     background: #1B83E2;
     height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
     font-family: Roboto;
     font-size: 24px;
     color: #F4F4F4;
-    text-align: center;
-
-    padding-top: 24px;
 }
 
 main {
@@ -117,11 +119,18 @@ button:active {
 section {
     border: 1px solid #1B83E2;
     border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .currency-container {
-    text-align: center;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
 }
 
 .currency-name {
@@ -136,7 +145,7 @@ section {
 }
 
 .arrow-img {
-    margin: 15px auto;
-    display: block;
+ 
+
 
 }
