--- a/modulo16/grid-template-colums/style.css
+++ b/modulo16/grid-template-colums/style.css
@@ -12,7 +12,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; 
     /* grid-template-rows: 1fr 2fr 3fr; */
-    grid-gap: 20px;
+    /* grid-gap: 20px; */
+    /* grid-auto-rows: minmax(500px, auto); */
     
 
 }
@@ -28,6 +29,7 @@
 
 .two {
     background: royalblue;
+
 }
 
 .three {
